[package]
name = "tg-ws-proxy-pc"
version = "1.0.0"
edition = "2021"
description = "Desktop (Windows/Linux/macOS) MTProto proxy for Telegram that tunnels over Cloudflare WebSocket — CLI + GUI. Fork of tg-ws-proxy-android."
license = "GPL-3.0-only"
repository = "https://github.com/North-web-dev/tg-ws-proxy-pc"

[lib]
# `lib` (rlib) lets the CLI/GUI binaries link the engine directly on desktop;
# `cdylib` is kept so the original Android/JNI build path still works.
name = "tgwsproxy"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "tgwsproxy-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "tgwsproxy-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[features]
default = []
# GUI pulls in eframe/egui + native clipboard; kept optional so the CLI and the
# library build on headless machines without desktop/GL system libraries.
gui = ["dep:eframe", "dep:egui", "dep:arboard"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "signal"] }
tokio-util = "0.7"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
once_cell = "1"
parking_lot = "0.12"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
byteorder = "1"
socket2 = "0.5"

# HTTP-клиент для DoH/GitHub без TLS-дублирования: используем reqwest на rustls
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- desktop CLI ---
clap = { version = "4", features = ["derive"] }

# --- desktop GUI (optional, behind `gui` feature) ---
eframe = { version = "0.29", optional = true, default-features = false, features = ["glow", "default_fonts"] }
egui = { version = "0.29", optional = true }
arboard = { version = "3", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
